# patina

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: app.rs  assets.rs  config.rs  lib.rs  main.rs  settings.rs  ui.rs
core/: Cargo.toml
core/src/: auth.rs  config.rs  lib.rs  llm.rs  llm_streaming_test.rs  mcp.rs  project.rs  state.rs  store.rs  telemetry.rs
design/settings_dialog_light_mode/: code.html
design/stitch_patina_ai_chat_interface/patina_ui_dark_mode/: code.html
design/stitch_patina_ai_chat_interface/patina_ui_light_mode/: code.html
docs/: README.md  architecture.md  coding_guidelines.md
images/: patina-dark.xcf  patina-light.xcf  patina-logo-large-transparent.xcf  patina-logo-min-transparent.xcf  patina-min-dark.xcf  patina-min-light.xcf
packaging/: README-linux.txt  README-macos.txt  README-windows.txt
prompts/: 2025-11-08-01.AGENTS.md  2025-11-09-01.AGENTS.md  2025-11-09-02.AGENTS.md  2025-11-10-01.AGENTS.md
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/ui_snapshots/: mod.rs
tests/src/unit/: state_tests.rs
tests/ui_snapshots/: dark.snapshot  light.snapshot
xtask/: Cargo.toml
xtask/src/: main.rs
