[workspace]
members = [
    "app",
    "core",
    "tests",
    "xtask"
]
resolver = "2"

[workspace.package]
name = "patina"
version = "0.1.0"
edition = "2021"
authors = ["Patina Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
directories = "5.0"
futures = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
