[workspace]
members = [
    "app",
    "core",
    "tests",
    "xtask"
]
resolver = "2"

[workspace.package]
name = "patina"
version = "0.2.0"
edition = "2021"
authors = ["Patina Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
directories = "5.0"
dotenvy = "0.15"
futures = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.8.5", features = ["client", "transport-child-process"] }
toml = "0.8"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.10"
url = "2.4"
