[package]
name = "patina-app"
version = "0.1.0"
edition = "2021"
authors = ["Patina Contributors"]
description = "Patina desktop chat client"
license = "MIT OR Apache-2.0"

[dependencies]
patina-core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# UI dependencies
eframe = { version = "0.26", default-features = false, features = ["glow"] }
egui = "0.26"
egui_commonmark = { version = "0.13", features = ["better_syntax_highlighting"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
