[package]
name = "patina"
version = "0.2.0"
edition = "2021"
authors = ["Patina Contributors"]
description = "Patina desktop chat client"
license = "MIT"

[[bin]]
name = "patina"
path = "src/main.rs"

[dependencies]
patina-core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

# UI dependencies
eframe = { version = "0.26", default-features = false, features = ["glow"] }
egui = "0.26"
egui_commonmark = { version = "0.13", features = ["better_syntax_highlighting"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rfd = "0.14"
