[package]
name = "patina-core"
version = "0.1.0"
edition = "2021"
authors = ["Patina Contributors"]
description = "Core logic for the Patina desktop client"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
