[package]
name = "patina-core"
version = "0.2.0"
edition = "2021"
authors = ["Patina Contributors"]
description = "Core logic for the Patina desktop client"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rmcp = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
