[package]
name = "patina-tests"
version = "0.3.0"
edition = "2021"
authors = ["Patina Contributors"]
description = "Integration and smoke tests for Patina"
license = "MIT"

[dependencies]
patina-core = { path = "../core" }
patina = { path = "../app" }
anyhow = { workspace = true }
tokio = { workspace = true }
egui = "0.26"
tempfile = { workspace = true }
